# transformer-from-scratch

./: .gitignore  README.md  pyproject.toml
notebooks/: gpt-numpy.ipynb  gpt_numpy.ipynb  gpt_torch.ipynb
transformer_from_scratch/: __init__.py  helpers.py  numpy_gpt.py
